--- a/page-einf.html
+++ b/page-einf.html
@@ -422,22 +422,18 @@ $(document).ready(function () {
 <p><img src="images/q1_01einf/excel_dollars.PNG" style="width:80.0%" /> <br /> <br /></p>
 <p>Machen Sie jetzt in dieser Spalte eine “automatische Vervollständigung” mit “klicken und nach unten ziehen”, genau wie Sie es schon für die Monatsspalte links danaben gemacht hatten. Sie sollten jetzt die Ergebnisse für alle anderen Monate erhalten haben.</p>
 <p>Was wäre passiert, wenn man die Dollarzeichen nicht gesetzt hätte? Probieren Sie das einmal aus und schauen Sie, was sich ändert.</p>
-<p>Mit Dollarzeichen kann man Zellenbezüge (oder sogar ganze Spaltenbezüge) <strong>fixieren</strong>. Das ist sehr nützlich, um vernünftig mit Dingen, wie der automatischen Vervollständigung, arbeiten zu können.</p>
-<p><strong>Aufgabe 4) Besetimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
-<p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
+<p>Mit Dollarzeichen kann man Zellenbezüge (oder sogar ganze Spaltenbezüge) <strong>fixieren</strong>. Das ist sehr nützlich, um vernünftig mit Dingen, wie der automatischen Vervollständigung, arbeiten zu können. Warum genau das nützlich ist, erfahrt ihr in dem kurzen Video unten.</p>
 <p><br /></p>
-<div id="video-tutorial" class="section level3">
-<h3>Video-Tutorial</h3>
-<p>Abschließend ein Video-Tutorial, in dem wir die Lösung der Geburtstagsaufgabe demonstrieren. Außerdem erklären wir hier anhand der Aufgabe noch einmal, was es mit dem “Fixieren” von Zellen auf sich hat.</p>
-<p><br /></p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_grvR5slMsI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D-727hXLsAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p><br /> <br /></p>
 <div class="boxBorder">
-<p><strong>TIPP:</strong> <em>Ein sehr guter YouTube-Kanal rund um Excel ist der Kanal</em> <strong>TableTorial</strong> <em>. Das Video dieses Kanals, welches das Fixieren von Zellen behandelt, finden Sie <a href="https://www.youtube.com/watch?v=jldnaofJAC4">hier</a>. Da das Fixieren von Zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, auch dieses Video zu schauen.</em></p>
+<p><strong>TIPP:</strong> <em>Ein sehr guter YouTube-Kanal rund um Excel ist der Kanal</em> <strong>TableTorial</strong> <em>. Das Video dieses Kanals, welches das Fixieren von Zellen ausführlich behandelt, finden Sie <a href="https://www.youtube.com/watch?v=jldnaofJAC4">hier</a>. Da das Fixieren von Zellen äußert wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, auch dieses Video zu schauen.</em></p>
 </div>
 <p><br /> <br /></p>
-</div>
+<p><strong>Aufgabe 4) Besetimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
+<p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
+<p><br /></p>
 </div>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
