--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -292,10 +292,13 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Quantitative Methoden I</li>
     <li>
-      <a href="page-einf.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
+      <a href="page-01einfuehrung.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
     </li>
     <li>
-      <a href="page-umfrexp.html">Sitzung 2: Umfragen und Experimente</a>
+      <a href="page-02umfragen.html">Sitzung 2: Umfragen</a>
+    </li>
+    <li>
+      <a href="page-03experimente.html">Sitzung 3: Experimente</a>
     </li>
     <li class="divider"></li>
     <li class="dropdown-header">Quantitative Methoden II</li>
