--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 2: Umfragen und Experimente</title>
+<title>Sitzung 2: Umfragen</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -292,10 +292,13 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Quantitative Methoden I</li>
     <li>
-      <a href="page-einf.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
+      <a href="page-01einfuehrung.html">Sitzung 1: Einführung - Arbeiten mit MS Excel</a>
     </li>
     <li>
-      <a href="page-umfrexp.html">Sitzung 2: Umfragen und Experimente</a>
+      <a href="page-02umfragen.html">Sitzung 2: Umfragen</a>
+    </li>
+    <li>
+      <a href="page-03experimente.html">Sitzung 3: Experimente</a>
     </li>
     <li class="divider"></li>
     <li class="dropdown-header">Quantitative Methoden II</li>
@@ -316,7 +319,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 2: Umfragen und Experimente</h1>
+<h1 class="title toc-ignore">Sitzung 2: Umfragen</h1>
 
 </div>
 
