--- a/page-03experimente.html
+++ b/page-03experimente.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Quantitative Methoden</title>
+<title>Sitzung 2: Umfragen</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -319,19 +319,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Quantitative Methoden</h1>
+<h1 class="title toc-ignore">Sitzung 2: Umfragen</h1>
 
 </div>
 
 
-<p>Herzlich willkommen auf der Seminarseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
-<p>Auf dieser Website finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
-<p>Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
-<p>Die Lernmaterialien (Datensätze, Lösungen, etc.) haben wir in einem GitHub Online-Repository für Sie hinterlegt. Sie können sich die Materialien dort downloaden.</p>
-<p>Zu den Materalien für Quanti I geht es <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>.</p>
-<p>Zu den Materialien für Quanti II geht es <a href="https://github.com/QuantiGoettingen/quanti_zwei_files">hier</a>.</p>
-<p>Viel Spaß.</p>
-<p><img src="images/home/squirrel.PNG" /></p>
+<p>Was sind Umfragen und was sind Experimente?</p>
+<p>Experimente:</p>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
