--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -324,7 +324,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Was sind Umfragen und was sind Experimente?</p>
+<p>Was sind Umfragen?</p>
 <p>Experimente:</p>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
