--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>Herzlich willkommen auf der Seminarseite zu den Modulen Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
-<p>Auf dieser Website finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
+<p>Herzlich willkommen auf der Begleitseite für die Seminare der Module Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
+<p>Auf dieser Seite finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p>Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
 <p>Die Lernmaterialien (Datensätze, Lösungen, etc.) haben wir in einem GitHub Online-Repository für Sie hinterlegt. Sie können sich die Materialien dort downloaden.</p>
 <p>Zu den Materalien für Quanti I geht es <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>.</p>
