--- a/page-03experimente.html
+++ b/page-03experimente.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 2: Umfragen</title>
+<title>Sitzung 3: Deskriptive Statistik – Experimente</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -319,13 +319,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 2: Umfragen</h1>
+<h1 class="title toc-ignore">Sitzung 3: Deskriptive Statistik – Experimente</h1>
 
 </div>
 
 
-<p>Was sind Umfragen und was sind Experimente?</p>
-<p>Experimente:</p>
+<p>Was sind Experimente?</p>
+<p><img src="images/q1_03exp/squirrel_fitness.PNG" style="width:75.0%" /></p>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
