--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 2: Umfragen</title>
+<title>Sitzung 2: Deskriptive Statistik – Umfragen</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -319,13 +319,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 2: Umfragen</h1>
+<h1 class="title toc-ignore">Sitzung 2: Deskriptive Statistik – Umfragen</h1>
 
 </div>
 
 
 <p>Was sind Umfragen?</p>
-<p>Experimente:</p>
+<p><img src="images/q1_02umfr/squirrel_litter.PNG" style="width:60.0%" /></p>
 
 <p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
 
