--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="favicon.ico"/>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+      </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -324,16 +334,26 @@ $(document).ready(function () {
 </div>
 
 
+<div class="row">
+<div class="column-right">
+<p><img src="images/home/squirrel.PNG" /></p>
+</div>
+<div class="column-left">
 <p>Herzlich willkommen auf der Begleitseite für die Seminare der Module Quantitative Methoden I und II im Studienfach Psychologie an der Uni Göttingen.</p>
 <p>Auf dieser Seite finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p>Zu den jeweiligen Sitzungen gelangen Sie über das Menü “Veranstaltung”.</p>
-<p>Die Lernmaterialien (Datensätze, Lösungen, etc.) haben wir in einem GitHub Online-Repository für Sie hinterlegt. Sie können sich die Materialien dort downloaden.</p>
-<p>Zu den Materalien für Quanti I geht es <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>.</p>
-<p>Zu den Materialien für Quanti II geht es <a href="https://github.com/QuantiGoettingen/quanti_zwei_files">hier</a>.</p>
-<p>Viel Spaß.</p>
-<p><img src="images/home/squirrel.PNG" /></p>
+<p><br> Die Lernmaterialien (Datensätze, Lösungen, etc.) haben wir in einem GitHub Online-Repository für Sie hinterlegt. Sie können sich die Materialien dort downloaden.</p>
+<p><br></p>
+<ul>
+<li><p>Zu den Materalien für <strong>Quanti I</strong> geht es <a href="https://github.com/QuantiGoettingen/quanti_eins_files">hier</a>.</p></li>
+<li><p>Zu den Materialien für <strong>Quanti II</strong> geht es <a href="https://github.com/QuantiGoettingen/quanti_zwei_files">hier</a>.</p></li>
+</ul>
+<p><br></p>
+<p>Viel Spaß!</p>
+</div>
+</div>
 
-<p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
+<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
 
