--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -24,6 +24,16 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="favicon.ico"/>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+      </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -324,10 +334,12 @@ $(document).ready(function () {
 </div>
 
 
+<div class="column-right">
+<p><img src="images/q1_01einf/excelsquirrel.PNG" /></p>
+</div>
 <p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende/r das Programm günstig über eine Uni-Lizenz bei studyhouse erwerben. Klicken Sie dazu einfach <a href="https://www.studyhouse.de/cgi-bin/product/office-proplus-georg-august-universitaet-goettingen-microsoft-bueroapplikationen-P10016549!381464">hier</a>.</p>
 <p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
 <p><br /></p>
-<p><img src="images/q1_01einf/excelsquirrel.PNG" /></p>
 <p><br /></p>
 <div id="erste-schritte---die-exceloberfläche" class="section level2">
 <h2>Erste Schritte - die Exceloberfläche</h2>
@@ -439,7 +451,7 @@ $(document).ready(function () {
 <p><br /></p>
 </div>
 
-<p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
+<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
 
