--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -24,6 +24,16 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="favicon.ico"/>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+      </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -324,10 +334,12 @@ $(document).ready(function () {
 </div>
 
 
+<div class="column-right">
+<p><img src="images/q1_02umfr/squirrel_litter.PNG" /></p>
+</div>
 <p>Was sind Umfragen?</p>
-<p><img src="images/q1_02umfr/squirrel_litter.PNG" style="width:60.0%" /></p>
 
-<p>Copyright &copy; 2020 Quanti-Team. All rights reserved.</p>
+<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
 
