--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ $(document).ready(function () {
 
 <div class="row">
 <div class="column-right">
-<p><img src="images/home/squirrel.PNG" /></p>
+<p><img src="images/home/squirrel.png#bordered" /></p>
 </div>
 <div class="column-left">
 <p>Herzlich willkommen auf der Begleitseite für die Seminare der Module <strong>Quantitative Methoden I</strong> (Wintersemester) und <strong>Quantitative Methoden II</strong> (Sommersemester) im Studienfach Psychologie an der Uni Göttingen.</p>
