--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -368,53 +368,59 @@ $(document).ready(function () {
 </div>
 
 
-<div id="einführung" class="section level2">
-<h2>Einführung</h2>
-<div id="sitzung-1-arbeiten-mit-ms-excel" class="section level3">
-<h3>Sitzung 1: Arbeiten mit MS Excel</h3>
+<style>
+body {
+    font-family: 'Muli';
+    font-size: 14px;
+}
+</style>
+<h2>
+<font style="color:lightgrey;"> Einführung </font>
+</h1>
+<div id="sitzung-1-arbeiten-mit-ms-excel" class="section level4">
+<h4>Sitzung 1: Arbeiten mit MS Excel</h4>
 <ul>
 <li>Excel-Datensatz “Lebenserwartung von Hörnchen”: <a href="q1_dataFiles/01_Einfuehrung_LebenserwartungHoernchen.xlsx">download</a></li>
 <li>Excel-Datensatz “Geburtstage und Jahreszeiten”: <a href="q1_dataFiles/01_Einfuehrung_Geburtstage.xlsx">download</a></li>
 </ul>
-<p><br></p>
+<hr />
+<h2>
+<font style="color:lightgrey;"> Deskriptive Statistik </font>
+</h1>
 </div>
-</div>
-<div id="deskriptive-statistik" class="section level2">
-<h2>Deskriptive Statistik</h2>
-<div id="sitzung-2-umfragen" class="section level3">
-<h3>Sitzung 2: Umfragen</h3>
+<div id="sitzung-2-umfragen" class="section level4">
+<h4>Sitzung 2: Umfragen</h4>
 <ul>
 <li>Link dann hier</li>
 </ul>
 </div>
-<div id="sitzung-3-experimente" class="section level3">
-<h3>Sitzung 3: Experimente</h3>
+<div id="sitzung-3-experimente" class="section level4">
+<h4>Sitzung 3: Experimente</h4>
 <ul>
 <li>Link dann hier</li>
 </ul>
-<p><br></p>
+<hr />
+<h2>
+<font style="color:lightgrey;"> Inferenzstatistik </font>
+</h1>
 </div>
-</div>
-<div id="inferenzstatistik" class="section level2">
-<h2>Inferenzstatistik</h2>
-<div id="sitzung-4-standardfehler-und-konfidenzintervall" class="section level3">
-<h3>Sitzung 4: Standardfehler und Konfidenzintervall</h3>
-<ul>
-<li>Link dann hier</li>
-</ul>
-</div>
-<div id="sitzung-5-mittelwertsunterschiede-bei-unabhängigen-stichproben" class="section level3">
-<h3>Sitzung 5: Mittelwertsunterschiede bei unabhängigen Stichproben</h3>
+<div id="sitzung-4-standardfehler-und-konfidenzintervall" class="section level4">
+<h4>Sitzung 4: Standardfehler und Konfidenzintervall</h4>
 <ul>
 <li>Link dann hier</li>
 </ul>
 </div>
-<div id="sitzung-6-mittelwertsunterschiede-bei-abhängigen-stichproben" class="section level3">
-<h3>Sitzung 6: Mittelwertsunterschiede bei abhängigen Stichproben</h3>
+<div id="sitzung-5-mittelwertsunterschiede-bei-unabhängigen-stichproben" class="section level4">
+<h4>Sitzung 5: Mittelwertsunterschiede bei unabhängigen Stichproben</h4>
 <ul>
 <li>Link dann hier</li>
 </ul>
 </div>
+<div id="sitzung-6-mittelwertsunterschiede-bei-abhängigen-stichproben" class="section level4">
+<h4>Sitzung 6: Mittelwertsunterschiede bei abhängigen Stichproben</h4>
+<ul>
+<li>Link dann hier</li>
+</ul>
 </div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
