--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -368,7 +368,21 @@ $(document).ready(function () {
 </div>
 
 
-<p>Leider noch nicht fertig, sorry.</p>
+<style>
+body {
+    font-family: 'Muli';
+    font-size: 14px;
+}
+</style>
+<h2>
+<font style="color:lightgrey;"> Einführung </font>
+</h1>
+<div id="sitzung-1-arbeiten-mit-r" class="section level4">
+<h4>Sitzung 1: Arbeiten mit R</h4>
+<ul>
+<li>Link dann hier</li>
+</ul>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
