--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -25,6 +25,7 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <link rel="icon" type="image/png" href="favicon.ico"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.16/iframeResizer.min.js" type="text/javascript"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -371,7 +372,13 @@ $(document).ready(function () {
 <div class="column-right">
 <p><img src="images/q1_02umfr/squirrel_litter.PNG" /></p>
 </div>
-<p>Was sind Umfragen?</p>
+<p>Nachdem wir letzte Woche die Excel-Basics behandelt haben, schauen wir uns heute mal an, wie man sich mit Excel einen ersten Überblick über erhobene Daten verschaffen kann. Dabei lernen wir außerdem weitere hilfreiche Funktionen des Programms kennen.</p>
+<p>Die Daten zum Auswerten kommen dabei teilweise von Ihnen selbst! Wir möchten Sie bitten, zwei kurze Fragebögen auszufüllen (in einem geht es um umweltbezogenes Verhalten, im anderen um Prokrastination) - das sollte insgesamt nicht länger als 5 Minuten dauern. Die Daten stellen wir dann zum Üben bereit, sobald sie erhoben sind. Die Teilnahme ist natürlich freiwillig und anonym!</p>
+<p>Da wir die gleichen Fragebögen bereits im letzten Jahrgang bearbeiten lassen haben, können wir mit diesen Daten anfangen. Dieselben Arbeitsschritte können Sie dann in ein paar Tagen an Ihren eigenen Jahrgangsdaten üben. <a href="link">Hier</a> geht’s zu den 2019er-Daten und hier (Link folgt) zu denen von 2020.</p>
+<p>Bei allen Datensätzen handelt es sich um simple Umfragen. Was unterscheidet eine Umfrage von einem Experiment?</p>
+<div id="section" class="section level2">
+<h2></h2>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
