--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -25,6 +25,7 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <link rel="icon" type="image/png" href="favicon.ico"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.16/iframeResizer.min.js" type="text/javascript"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -491,9 +492,16 @@ $(document).ready(function () {
 <p><strong>Aufgabe 4) Bestimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
 <p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
 <p><br /></p>
+<!---LEARNR EX 1-->
+<iframe style="margin:0 auto; min-width: 100%;" id="myIframe1" class="interactive" src="https://simonstephan.shinyapps.io/learnr_app1/" scrolling="no" frameborder="no">
+</iframe>
+<!---------------->
+<p><br /> <br /></p>
+<script>
+  iFrameResize({}, ".interactive");
+</script>
 </div>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
 
