--- a/page-02umfragen.html
+++ b/page-02umfragen.html
@@ -374,10 +374,72 @@ $(document).ready(function () {
 </div>
 <p>Nachdem wir letzte Woche die Excel-Basics behandelt haben, schauen wir uns heute mal an, wie man sich mit Excel einen ersten Überblick über erhobene Daten verschaffen kann. Dabei lernen wir außerdem weitere hilfreiche Funktionen des Programms kennen.</p>
 <p>Die Daten zum Auswerten kommen dabei teilweise von Ihnen selbst! Wir möchten Sie bitten, zwei kurze Fragebögen auszufüllen (in einem geht es um umweltbezogenes Verhalten, im anderen um Prokrastination) - das sollte insgesamt nicht länger als 5 Minuten dauern. Die Daten stellen wir dann zum Üben bereit, sobald sie erhoben sind. Die Teilnahme ist natürlich freiwillig und anonym!</p>
-<p>Da wir die gleichen Fragebögen bereits im letzten Jahrgang bearbeiten lassen haben, können wir mit diesen Daten anfangen. Dieselben Arbeitsschritte können Sie dann in ein paar Tagen an Ihren eigenen Jahrgangsdaten üben. <a href="link">Hier</a> geht’s zu den 2019er-Daten und hier (Link folgt) zu denen von 2020.</p>
+<p><a href="https://ww2.unipark.de/uc/NEngelmann/9058/">Hier</a> geht’s zur Umfrage! Gerne vor dem weiteren Lesen ausfüllen.</p>
+<p>Da wir die gleichen Fragebögen bereits im letzten Jahrgang bearbeiten lassen haben, können wir mit diesen Daten anfangen. Dieselben Arbeitsschritte können Sie dann in ein paar Tagen an Ihren eigenen Jahrgangsdaten üben. <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">Hier</a> geht’s zu den 2019er-Daten und hier (Link folgt) zu denen von 2020.</p>
 <p>Bei allen Datensätzen handelt es sich um simple Umfragen. Was unterscheidet eine Umfrage von einem Experiment?</p>
-<div id="section" class="section level2">
-<h2></h2>
+<p>Das Vorgehen wird hier nur für den Umwelt-Fragebogen veranschaulicht. Die Auswertungsschritte für den Prokrastinations-Fragebogen sind weitgehend identisch und können der Musterlösung entnommen werden.</p>
+<p><br /></p>
+<div id="der-datensatz" class="section level2">
+<h2>Der Datensatz</h2>
+<p><br /></p>
+<p>Der Umweltfragebogen besteht aus 10 Fragen (auch “Items” genannt). In unserem Datensatz bekommt jedes Item eine eigene Spalte und jede Zeile beinhaltet die Antworten einer anonymen Versuchsperson (also einer Person aus dem Quanti-Jahrgang 2019/20).</p>
+<p>Rechts ist ersichtlich, welches Kürzel in den Spaltenüberschriften zu welcher Frage gehört.</p>
+<p>In der Tabelle stehen die Antworten, die die Versuchspersonen auf die verschiedenen Fragen angekreuzt haben (auf der Skala von 1 - “nie” bis 6 - “immer”).</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_datensatz.png#bordered" style="width:100.0%" /></p>
+<p><br /> <br /></p>
+</div>
+<div id="items-rekodieren" class="section level2">
+<h2>Items rekodieren</h2>
+<p>Beim Lesen der Fragen fällt auf, dass nicht alle Fragen “in dieselbe Richtung formuliert” sind. Bei manchen Fragen zeigt ein hoher Wert auf der Skala ein besonders umweltfreundliches Verhalten an, bei anderen Fragen zeigt er ein besonders umweltschädliches Verhalten an. Wir wollen alle Items zur Vereinfachung der Auswertung so umkodieren, dass ein hoher Wert für ein <strong>umweltfreundliches</strong> Verhalten steht. Welche Items müssen wir “umdrehen” und wie könnte das funktionieren?</p>
+<p>Es bietet sich an, die Spalten mit den zu invertierenden Items zunächst einmal farblich zu kennzeichnen und rechts von ihnen eine neue, leere Spalte anzulegen. Diese zunächst leere Spalte kann dann später die invertierten Werte beinhalten. Um in Excel eine neue Spalte zwischen bestehende Spalten einzufügen, kann man einfach eine bestehende Spalte komplett auswählen (indem man oben auf den Buchstaben klickt, der sie kennzeichnet). Durch Rechtsklick auf den nun markierten Bereich erscheint ein Menü, hier “Zellen einfügen” auswählen. <strong>Links von der markierten Spalte</strong> erscheint eine leere Spalte.</p>
+<p>Im untenstehenden Screenshot ist Item U1 gelb markiert, da es sich hierbei um eine Frage handelt, bei der ein hoher Wert ein umweltschädliches Verhalten anzeigt (Batterien in den Hausmüll werfen). Rechts von der Spalte, die U1 enthält, wird eine neue Spalte eingefügt. Wir nennen sie “U1_r”, weil hier die rekodierten Werte für U1 eingetragen werden sollen.</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_neuespalte.png" style="width:100.0%" /> <br /> <br /></p>
+<p>Wer mag, kann da zunächst selbst einmal überlegen, wie man das Item rekodieren könnte. Dafür brauchen wir keine gesonderte Excel-Funktion, sondern müssen uns nur eine einfache Rechnung überlegen. Diese sollte aus einem Wert von 1 in U1 eine 6 in U1_r machen. Eine 2 in U1 wird zur 5 in U1_r, eine 3 in U1 wird zur 4 in U1_r, eine 4 in U1 zur 3 in U1_r, eine 5 in U1 zur 2 in U1_r und eine 6 in U1 zur 1 in U1_r. Wem dazu nichts einfällt - siehe Lösung oder Lehrvideo.</p>
+<p>Woher weiß man, welche Items man rekodieren muss? Zu einem Fragebogen gehört normalerweise ein Handbuch, in dem solche Informationen enthalten wären. In unserem Fall kann man es sich recht leicht inhaltlich erschließen oder einfach der Lösung entnehmen.</p>
+</div>
+<div id="summenscores-bilden" class="section level2">
+<h2>Summenscores bilden</h2>
+<p>Wenn die nötigen Items rekodiert wurden, kann man pro Person einen Summenscore bilden, der ihr umweltbezogenes Verhalten widerspiegelt. Nach dem Rekodieren bedeuten höhere Werte auf allen Items ein umweltfreundlicheres Verhalten. Je höher also die Summe aller Items einer Person zusammengenommen, desto umweltfreundlicher verhält sie sich - oder behauptet es zumindest im Fragebogen.</p>
+<p>Wir haben gesehen, dass die Werte von jeder Versuchsperson in einer Zeile angeordnet sind. Man könnte also denken, dass wir für den Summenscore nun einfach die Summe jeder Zeile bilden müssen. Ganz so leicht geht es in diesem Fall aber nicht, da wir natürlich berücksichtigen müssen, dass wir von einigen Items zwei Versionen haben - die originale und die rekodierte. Im Summenscore wollen wir natürlich nur die rekodierte Version dieser Items berücksichtigen (bei denen ein höherer Wert für ein umweltfreundlicheres Verhalten steht).</p>
+<p>Wenn wir in der letzten Spalte der Tabelle anfangen, eine Summe pro Zeile zu bilden, können wir gezielt angeben, welche Werte summiert werden sollen und welche nicht. Nach dem Eintippen von “=SUMME(” halten wir dazu einfach die Strg-Taste gedrückt (Mac: Befehlstaste) und wählen die Zellen aus, die in den Summenscore eingehen sollen. Das sind einmal die Items, die von Anfang an richtig kodiert warten und andererseits die rekodierten Versionen von den Items, die es zu Beginn nicht waren (U1 ist also <strong>nicht</strong> drin, U1_r schon - usw.). Oben sind die genauen Zellenbezüge zu sehen, die natürlich auch einfach eingetippt werden können. Danach schließen wir die Klammer des Summenbefehls und drücken auf Enter.</p>
+<p>Das müssen wir zum Glück nur einmal machen! Für die restlichen Versuchspersonen kann der Befehl einfach übertragen werden wie in der letzten Sitzung gelernt (ein Doppelklick auf das kleine Quadrat rechts unten übertragt den Befehl übrigens noch schneller und einfacher auf die restlichen Zeilen. Auch hier erkennt Excel automatisch, wann die Tabelle endet.).</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_summestrg.png#bordered" style="width:100.0%" /></p>
+<p><br /></p>
+</div>
+<div id="summenscores-auszählen" class="section level2">
+<h2>Summenscores auszählen</h2>
+<p>Wir wollen nun wissen, wie viele Personen einen unterdurchschnittlichen, durchschnittlichen und überdurchschnittlichen Summenscore erreicht haben. Die numerischen Grenzen für jede dieser Kategorien stehen in der Arbeitsmappe. Um die Anzahl der Personen mit unterdurchschnittlich gutem Umweltverhalten zu ermitteln, wollen wir beispielsweise auszählen, wie viele Leute einen Summenscore &lt;= 39 erzielt haben. Das geht mit der sehr nützlichen “ZÄHLENWENN”-Funktion. Diese Funktion zählt einfach aus, wie viele Werte in einem definierten Bereich (hier: unsere Summenscores) ein bestimmtes Kriterium (hier: “&lt;= 39”, oder identisch “&lt;40” ) erfüllen. Das Kriterium muss in Anführungszeichen gesetzt werden, auch wenn es numerisch ist:</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_zählenwenn.png#bordered" style="width:100.0%" /></p>
+<p><br /></p>
+<p>Dieses Vorgehen lässt sich einfach auf die Kategorie “überdurchschnittlich” übertragen - hier muss das Kriterium nur durch “&gt;50” ersetzt werden. Aber was machen wir mit “durchschnittlich”, also den Werten zwischen 40 und 50? Leider lässt sich innerhalb von “ZÄHLENWENN” kein Wertebereich als Kriterium formulieren. Aber wir können uns mit einem Trick behelfen: Wir zählen zunächst alle Werte &lt;= 50 (also alle “unterdurchschittlichen” plus alle “durchschnittlichen”) und ziehen dann einfach die wieder ab, die bei “unterdurchschnittlich” bereits gezählt wurden (wir verweisen dazu einfach auf die Zelle, in der die “unterdurchschnittlich”-Werte gezählt wurden):</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_zählenwenn2.png#bordered" style="width:100.0%" /></p>
+<p><br /></p>
+<p>Beim Prokrastinations-Fragebogen gibt es übrigens noch mehr “mittlere” Kategorien, da kann dieses Vorgehen also auch nochmal gut im Detail nachvollzogen werden.</p>
+<p>Wenn wir auf diese Weise die drei Kategorien ausgezählt haben, bietet es sich an, nocheinmal die Summe über alle Kategorien hinweg zu berechnen. Dabei sollten wir auf unsere Gesamtanzahl an Versuchspersonen kommen (84). Wenn nicht, haben wir beim Auszählen einen Fehler gemacht.</p>
+<p><br /></p>
+<p><img src="images/q1_02umfr/excel_zähltabelle.png#bordered" style="width:100.0%" /></p>
+<p><br /></p>
+</div>
+<div id="ein-histogramm-erstellen" class="section level2">
+<h2>Ein Histogramm erstellen</h2>
+<p>Nun wollen wir unsere Werteverteilung graphisch darstellen. Dafür eignet sich ein <strong>Histogramm</strong>. Das ist eine Graphik, die die Anzahl von Messwerten in bestimmten Kategorien veranschaulicht. Das Erstellen von Graphiken in Excel lässt sich besser zeigen als beschreiben. Unten finden Sie deshalb ein kurzes Video, in dem wir Ihnen zeigen, wie man ein Histogramm erstellt:</p>
+<p><br /></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/A4wCaxV8bJ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<p><br /> <br /></p>
+<!---LEARNR-->
+<iframe style="margin:0 auto; min-width: 100%;" id="myIframe1" class="interactive" src="https://simonstephan.shinyapps.io/q1_02umfragen/" scrolling="no" frameborder="no">
+</iframe>
+<!---------------->
+<p><br /> <br /></p>
+<script>
+  iFrameResize({}, ".interactive");
+</script>
 </div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
