--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@ $(document).ready(function () {
 <div class="column-right">
 <p><img src="images/home/squirrel.PNG" /></p>
 </div>
-<p>Herzlich willkommen auf der Begleitseite für die Seminare der Module <strong>Quantitative Methoden I</strong> (Wintersemester) und <strong>Quantitative Methoden II</strong> (Sommersemester) im Studienfach Psychologie an der Uni Göttingen.</p>
+<p>Herzlich willkommen auf der Begleitseite für die Seminare der Module <strong>Quantitative Methoden I</strong> (Wintersemester) und <strong>Quantitative Methoden II</strong> (Sommersemester) im Studienfach Psychologie an der Uni Göttingen. In den Seminaren sollen Sie die theoretischen Inhalte der Vorlesung durch praktische Anwendung vertiefen. Diese Seite soll Sie dabei unterstützen.</p>
 <p><br></p>
-<p>Auf dieser Seite finden Sie Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
+<p>Sie finden hier Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p><br></p>
-<p>Zu den jeweiligen Sitzungen gelangen Sie über das jeweiligen Menüs oben.</p>
+<p>Zu den verschiedenen Sitzungen gelangen Sie über das jeweiligen Menüs oben in der Navigationsleiste.</p>
 <p><br></p>
-<p>Eine Übersicht über die Lernmaterialien (Übungsdaten inklusive Lösungen) habne wir auf separaten Seiten für Sie zusammengestellt. Dort können Sie sich die Materialien auch direkt downloaden. Alternativ finden Sie auch alle Dateien in Stud-IP.</p>
+<p>Eine Übersicht über die Lernmaterialien (Übungsdaten und Musterlösungen) haben wir auf separaten Seiten für Sie zusammengestellt. Dort können Sie sich die Materialien auch direkt downloaden. Alternativ finden Sie natürlich auch alle Dateien in Stud-IP.</p>
 <p><br></p>
 <ul>
 <li><p>Zu den Materalien für <strong>Quanti I</strong> geht es <a href="page-q1_materials.html">hier</a>.</p></li>
