--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ $(document).ready(function () {
 <p><br></p>
 <p>Sie finden hier Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p><br></p>
-<p>Zu den verschiedenen Sitzungen gelangen Sie über das jeweiligen Menüs oben in der Navigationsleiste.</p>
+<p>Zu den verschiedenen Sitzungen gelangen Sie über die jeweiligen Menüs oben in der Navigationsleiste.</p>
 <p><br></p>
 <p>Eine Übersicht über die Lernmaterialien (Übungsdaten und Musterlösungen) haben wir auf separaten Seiten für Sie zusammengestellt. Dort können Sie sich die Materialien auch direkt downloaden. Alternativ finden Sie natürlich auch alle Dateien in Stud-IP.</p>
 <p><br></p>
