--- a/page-04wsk_vert.html
+++ b/page-04wsk_vert.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Materialien für Quantitative Methoden I</title>
+<title>Sitzung 4: Inferenzstatistik – Standardfehler und Konfidenzintervall</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -364,66 +364,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Materialien für Quantitative Methoden I</h1>
+<h1 class="title toc-ignore">Sitzung 4: Inferenzstatistik – Standardfehler und Konfidenzintervall</h1>
 
 </div>
 
 
-<style>
-body {
-    font-family: 'Muli';
-    font-size: 14px;
-}
-</style>
-<h2>
-<font style="color:lightgrey;"> Einführung </font>
-</h1>
-<div id="sitzung-1-arbeiten-mit-ms-excel" class="section level4">
-<h4>Sitzung 1: Arbeiten mit MS Excel</h4>
-<ul>
-<li>Excel-Datensatz “Lebenserwartung von Hörnchen”: <a href="q1_dataFiles/01_Einfuehrung_LebenserwartungHoernchen.xlsx">download</a></li>
-<li>Excel-Datensatz “Geburtstage und Jahreszeiten”: <a href="q1_dataFiles/01_Einfuehrung_Geburtstage.xlsx">download</a></li>
-</ul>
-<hr />
-<h2>
-<font style="color:lightgrey;"> Deskriptive Statistik </font>
-</h1>
-</div>
-<div id="sitzung-2-umfragen-und-experimente---datenaufbereitung" class="section level4">
-<h4>Sitzung 2: Umfragen und Experimente - Datenaufbereitung</h4>
-<ul>
-<li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2019”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
-</ul>
-</div>
-<div id="sitzung-3-deskriptive-datenanalyse-und-grafiken" class="section level4">
-<h4>Sitzung 3: Deskriptive Datenanalyse und Grafiken</h4>
-<ul>
-<li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
-<li>Excel-Datensatz “Nussdiät und Fitness von Eichhörnchen”: <a href="q1_dataFiles/03_Experimente%20und%20deskriptive%20Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">download</a></li>
-</ul>
-<hr />
-<h2>
-<font style="color:lightgrey;"> Inferenzstatistik </font>
-</h1>
-</div>
-<div id="sitzung-4-arbeiten-mit-wahrscheinlichkeitsverteilungen" class="section level4">
-<h4>Sitzung 4: Arbeiten mit Wahrscheinlichkeitsverteilungen</h4>
-<ul>
-<li>Link dann hier</li>
-</ul>
-</div>
-<div id="sitzung-5-mittelwerte-standardfehler-und-konfidenzintervall" class="section level4">
-<h4>Sitzung 5: Mittelwerte, Standardfehler und Konfidenzintervall</h4>
-<ul>
-<li>Link dann hier</li>
-</ul>
-</div>
-<div id="sitzung-6-mittelwertsunterschiede-prüfen---t-tests" class="section level4">
-<h4>Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</h4>
-<ul>
-<li>Link dann hier</li>
-</ul>
-</div>
+
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
