--- a/page-einfr.html
+++ b/page-einfr.html
@@ -314,21 +314,21 @@ $(document).ready(function () {
     <li class="divider"></li>
     <li class="dropdown-header">Deskriptive Statistik</li>
     <li>
-      <a href="page-02umfragen.html">Sitzung 2: Umfragen</a>
+      <a href="page-02datenaufb.html">Sitzung 2: Umfragen und Experimente - Datenaufbereitung</a>
     </li>
     <li>
-      <a href="page-03experimente.html">Sitzung 3: Experimente</a>
+      <a href="page-03deskriptiv.html">Sitzung 3: Deskriptive Datenanalyse und Grafiken</a>
     </li>
     <li class="divider"></li>
     <li class="dropdown-header">Inferenzstatistik</li>
     <li>
-      <a href="page-04se_ki.html">Sitzung 4: Standardfehler und Konfidentintervall</a>
+      <a href="page-04wsk_vert.html">Sitzung 4: Arbeiten mit Wahrscheinlichkeitsverteilungen</a>
     </li>
     <li>
-      <a href="page-05mdiff1.html">Sitzung 5: Mittelwertsunterschiede bei unabhängigen Stichproben</a>
+      <a href="page-05m_se_ki.html">Sitzung 5: Mittelwerte, Standardfehler und Konfidenzintervall</a>
     </li>
     <li>
-      <a href="page-06mdiff2.html">Sitzung 6: Mittelwertsunterschiede bei abhängigen Stichproben</a>
+      <a href="page-06mdiffs.html">Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</a>
     </li>
   </ul>
 </li>
